WORKFLOWAUTOMATICASSIGNMENT-39 : fix changing the directory in the task edit form

--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
@@ -33,7 +33,7 @@
                 <div class="input-group">
                       <@comboWithParams 'directory' "${config.idDirectory}" "class='form-control input-sm'" directory_list />
 					  <span class="input-group-btn">
-                      <button class="btn btn-primary btn-sm" type="button" name="apply"  value="apply"  title="#i18n{module.workflow.automaticassignment.task_config.update_button}">
+                      <button class="btn btn-primary btn-sm" type="submit" name="apply"  value="apply"  title="#i18n{module.workflow.automaticassignment.task_config.update_button}">
                           <i class="glyphicon glyphicon-ok"></i>
                       </button>
 					  </span>
