--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
@@ -228,7 +228,7 @@
             </#if>
             
             <div class="form-group">
-                 <label class="control-label col-xs-12 col-sm-3 col-md-3 col-lg-3" for="view_record">#i18n{module.workflow.automaticassignment.task_config.label_notification} :</label>
+                 <label class="control-label col-xs-12 col-sm-3 col-md-3 col-lg-3" for="view_record">#i18n{module.workflow.automaticassignment.task_config.label_view_record} :</label>
                  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <div class="checkbox">
 						<label>
